# dash_df_plot

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py  setup.py
dash_df_plot/: __init__.py  _version.py  app.py  ids.py  utils.py
dash_df_plot/assets/: custom-script.js  style.css
dash_df_plot/config/: gunicorn.py  settings.py
